--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 #root{
   width: 100%;
@@ -21,24 +22,43 @@ body{
   justify-content: center;
   align-items: center;
 }
-input{
+.input{
   background-color: #fff;
   border: none;
   border-bottom: 1px #2c2d84 solid;
   padding: 10px 25px 10px 0;
   width: 80%;
 }
-input:focus{
+.input:focus{
   outline: none;
 }
-button{
-  background-color: #5153c7;
-  border: none;
-  color: #fff;
-  padding: 10px 25px;
-  border-radius: 25px;
-  cursor: pointer;
+
+.container{
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-columns:250px 1fr;
+  grid-template-areas: "navbar content" "navbar content";
 }
-button:hover{
-  background-color: #2c2d84;
+button {
+  padding: 0.75em;
+  background-color: #007BFF; 
+  color: white; 
+  border: none; 
+  border-radius: 4px;
+  font-size: 1em; 
+  cursor: pointer; 
+  transition: background-color 0.3s; 
+  margin: 0 auto;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+::-webkit-scrollbar{
+  width: 10px;
+}
+::-webkit-scrollbar-thumb{
+  border-radius: 200px;
+  background-color: #007BFF;
 }
