--- a/src/Pages/Client/Client.css
+++ b/src/Pages/Client/Client.css
@@ -6,6 +6,8 @@
     width: 100%;
     height: 100vh;
     z-index: 10;
-    align-items: center;
+    align-items: start;
     background-color: #222;
+    padding: 20px 10px;
+    justify-content: center;
 }
