--- a/src/Pages/Client/components/Navigator-Bar.css
+++ b/src/Pages/Client/components/Navigator-Bar.css
@@ -4,23 +4,25 @@
     grid-area: navbar;
     display: flex;
     flex-direction: column;
+    height: 100vh;
 }
 
 
 .item > p{
     padding: 10px 30px;
-    transition: all .3s ease;
+    transition: all .2s ease;
     text-align: center;
     color: white;
     display: flex;
     gap: 1em;
+    font-weight: 400;
 }
 
 .item > p:hover {
     background-color: #fff;
-    color: black;
+    color: #222;
     cursor: pointer;
-    transform: scale(1.2);
+    transform: scaleY(1.1)
     
 }
 
@@ -32,7 +34,6 @@
 }
 .item.active >p {
     background-color: #fff;
-    color: black;
+    color: #222;
     cursor: pointer;
-    transform: scale(1.2);
 }
