--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,68 +1,71 @@
-header{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1em;
-    padding: 10px;
-    background:linear-gradient( #007BFF);
-    color: white;
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+  padding: 10px;
+  background: linear-gradient(#007BFF);
+  color: white;
 }
-header img{
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
+
+header img {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
 }
-header h1{
-    text-transform: uppercase;
+
+header h1 {
+  text-transform: uppercase;
 }
-.container-loading{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    width: 100%;
+
+.container-loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
 }
+
 .loader {
-    width: 120px;
-    height: 22px;
-    border-radius: 20px;
-    color: #007BFF;
-    border: 2px solid;
-    position: relative;
+  width: 120px;
+  height: 22px;
+  border-radius: 20px;
+  color: #007BFF;
+  border: 2px solid;
+  position: relative;
+}
+
+.loader::before {
+  content: "";
+  position: absolute;
+  margin: 2px;
+  inset: 0 100% 0 0;
+  border-radius: inherit;
+  background: currentColor;
+  animation: l6 2s infinite;
+}
+
+@keyframes l6 {
+  100% {
+    inset: 0
   }
-  .loader::before {
-    content: "";
-    position: absolute;
-    margin: 2px;
-    inset: 0 100% 0 0;
-    border-radius: inherit;
-    background: currentColor;
-    animation: l6 2s infinite;
-  }
-  @keyframes l6 {
-      100% {inset:0}
-  }
+}
+
 .loader-component {
-    width: 60px;
-    aspect-ratio: 1;
-    border: 15px solid #ffffffd1;
-    border-radius: 50%;
-    position: relative;
-    transform: rotate(45deg);
+  border: 6px dotted #007BFF;
+  border-radius: 100%;
+  width: 50px;
+  height: 50px;
+  animation: loading 2s infinite linear;
+}
+
+@keyframes loading {
+  0% {
+    transform: rotate(0deg);
   }
-  .loader-component::before {
-    content: "";
-    position: absolute;
-    inset: -15px;
-    border-radius: 50%;
-    border: 15px solid #007BFF;
-    animation: l18 2s infinite linear;
+
+  100% {
+    transform: rotate(360deg);
   }
-  @keyframes l18 {
-      0%   {clip-path:polygon(50% 50%,0 0,0    0,0    0   ,0    0   ,0    0   )}
-      25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0   ,100% 0   ,100% 0   )}
-      50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
-      75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0    100%,0    100%)}
-      100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0    100%,0    0   )}
-  }
+}
