--- a/src/Pages/Client/components/HistoryComponents/styles.css
+++ b/src/Pages/Client/components/HistoryComponents/styles.css
@@ -105,6 +105,7 @@
     border: 1px solid #434343;
     box-shadow: 1px 2px 5px #0f87ef74;
     width: 250px;
+    justify-content: space-between;
 }
 
 .card-header {
