--- a/src/Pages/Client/mini-components/styles.css
+++ b/src/Pages/Client/mini-components/styles.css
@@ -32,3 +32,18 @@
 .content-summary h4{
     font-weight: 400;
 }
+.overlay.active {
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #333333dc;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.overlay {
+    display: none;
+}
