--- a/src/Pages/Client/components/styles.css
+++ b/src/Pages/Client/components/styles.css
@@ -210,6 +210,10 @@ thead {
     border-bottom: 1px solid #424242;
     width: 80%;
 }
+.map-location{
+    width: 100%;
+    height: 300px;
+}
 .state-order, .details-order, .personal-information-distributor{
     display: flex;
     width: 80%;
