--- a/src/Pages/Distributor/Components/Home/styles.css
+++ b/src/Pages/Distributor/Components/Home/styles.css
@@ -1,7 +1,6 @@
 .home-distributor {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    width: 97%;
     height: 100vh;
     padding: 20px;
     grid-template-areas: "current-orders new-orders";
@@ -16,7 +15,7 @@
     width: 90%;
     margin: 0 auto;
     height: 90%;
-    background-color: #424242;
+    background-color: #333;
     padding: 20px;
     border-radius: 10px;
     border: 1px #333;
@@ -62,6 +61,8 @@
     border-radius: 20px;
     transition: all 0.3s ease;
     width: 80px;
+    margin-top: 10px;
+    float: right;
 }
 
 .parrafo:hover {
@@ -107,8 +108,8 @@
 
 .container-item {
     width: 90%;
-    background-color: #333;
-    border: 1px solid #424242;
+    background-color: #424242;
+    border: 1px solid #505050;
     border-radius: 8px;
     padding: 16px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -156,4 +157,33 @@
     transform: scale(1.01);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+.container-dashboard{
+    background-color: #222;
+}
+@media (max-width: 1340px) {
+    .container-dashboard{
+        grid-area: content;
+    }
+}
+@media (max-width: 800px) {
+    .currentOrders-distributor, .new-orders-distributor {
+        height: 650px;
+    }
+    .current-orders-container{
+        height: 70%;
+    }
+    .home-distributor {
+        grid-template-columns: 1fr;
+        grid-template-areas: "current-orders" "new-orders";
+        overflow: auto;
+    }
+}
+@media (max-width: 530px) {
+    .buttons-order{
+        flex-direction: column;
+    }
+    .parrafo{
+       float: none;
+    }
 }
