--- a/src/Pages/Client/components/HistoryComponents/styles.css
+++ b/src/Pages/Client/components/HistoryComponents/styles.css
@@ -6,6 +6,7 @@
     border-radius: 10px;
     flex-direction: column;
     height: 120px;
+    box-sizing: content-box;
 }
 
 .items-history {
@@ -190,4 +191,43 @@
     font-size: 1.2rem;
     font-weight: bold;
     color: #d9534f;
+}
+
+@media (max-width: 1080px) {
+    .history-content {
+        height: 69%;
+        overflow-y: auto;
+    }
+
+}
+
+@media (max-width: 480px) {
+    .container-summary {
+        text-align: center;
+        height: auto;
+    }
+
+    .title-summary {
+        font-size: 1.2em;
+    }
+
+    .card-history {
+        width: 100%;
+        align-items: center;
+        text-align: center;
+    }
+
+    .items-summary {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width: 360px) {
+    .card-header{
+        flex-direction: column;
+        gap: 1em;
+        text-align: center;
+        align-items: center;
+    }
 }
