--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-*{
+* {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
   list-style: none;
   text-decoration: none;
 }
-body{
+
+body {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -15,52 +16,75 @@ body{
   align-items: center;
   overflow: hidden;
 }
-#root{
+
+#root {
   width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.input{
+
+.input {
   background-color: #fff;
   border: none;
   border-bottom: 1px #2c2d84 solid;
   padding: 10px 25px 10px 0;
   width: 80%;
 }
-.input:focus{
+
+.input:focus {
   outline: none;
 }
 
-.container{
+.container {
   width: 100%;
   height: 100vh;
   display: grid;
-  grid-template-columns:250px 1fr;
+  grid-template-columns: 250px 1fr;
   grid-template-areas: "navbar content" "navbar content";
 }
+
 button {
   padding: 0.75em;
-  background-color: #007BFF; 
-  color: white; 
-  border: none; 
+  background-color: #007BFF;
+  color: white;
+  border: none;
   border-radius: 4px;
-  font-size: 1em; 
-  cursor: pointer; 
-  transition: background-color 0.3s; 
+  font-size: 1em;
+  cursor: pointer;
+  transition: background-color 0.3s;
   margin: 0 auto;
-  transition: all 0.2s ease-in-out; 
+  transition: all 0.2s ease-in-out;
 }
 
 button:hover {
   background-color: #0056b3;
   transform: scale(1.1);
 }
-::-webkit-scrollbar{
+
+::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
-::-webkit-scrollbar-thumb{
+
+::-webkit-scrollbar-thumb {
   border-radius: 200px;
   background-color: #007BFF;
+}
+
+@media (max-width:1340px) {
+  .container {
+    grid-template-columns: 0px 1fr;
+  }
+  .navigator-bar.active{
+   left: 0px;
+  }
+  .navigator-bar{
+    width: 300px;
+    position: absolute;
+    z-index: 3200;
+    left: -500px;
+  }
+
 }
