--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -6,3 +6,34 @@
 .leaflet-routing-alternatives-container{
 display: none;
 }
+.overlay-map{
+  display: none;
+}
+.overlay-map.active{
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    z-index: 1000;
+    background-color: #00000067;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+}
+.container-map-location{
+  position: absolute;
+
+  background-color: #424242;
+  width: 80%;
+  height: 90%;
+  padding: 15px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items: center;
+  gap: 1em;
+}
+.container-map{
+  width: 80%;
+  height: 90%;
+}
