--- a/src/components/Navigator-Bar.css
+++ b/src/components/Navigator-Bar.css
@@ -6,10 +6,15 @@
     flex-direction: column;
     height: 100vh;
     transition: all 0.5s ease;
+    position: relative;
+}
+
+.icon-menu-bar {
+    display: none;
 }
 
 
-.item > p{
+.item>p {
     padding: 10px 30px;
     transition: all .2s ease;
     text-align: center;
@@ -19,12 +24,11 @@
     font-weight: 400;
 }
 
-.item > p:hover {
+.item>p:hover {
     background-color: #fff;
     color: #222;
     cursor: pointer;
     transform: scaleY(1.1)
-    
 }
 
 .items-nav {
@@ -33,8 +37,17 @@
     flex-direction: column;
     justify-content: space-between;
 }
-.item.active >p {
+
+.item.active>p {
     background-color: #fff;
     color: #222;
     cursor: pointer;
+}
+@media (max-width:1340px) {
+    .icon-menu-bar{
+      display: flex;
+      position: absolute;
+      right: 10px;
+      top: 10px;
+  }
 }
